# dextrous_hand

./: .gitignore  CMakeLists.txt  Readme.md  dependencies.txt  package.xml  setup.cfg  setup.py
data/: config.yaml
data/assets/: convert.py  faive_structure_p4_arm.xml  hand_p4_arm.xml  (+8 more)
dextrous_hand/: Abduction.py  Arm.py  DynamixelClient.py  Finger.py  FingerJoints.py  Hand.py  HandConfig.py  Joint.py  Motor.py  MotorBridge.py  Subsystem.py  Wrist.py  WristJoint.py  architecture.py  configs.py  constants.py  ids.py  joints_geometry.py  utils.py
dextrous_hand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
include/: basic_node.hpp
launch/: current_graph.py  full_pipeline.py  keyboard_simulation.py  keyboard_teleop.py  manual.py  motor_teleop.launch.py  mujoco_teleop.py  rokoko_simulation.py  rokoko_teleop.py  rosbag_simulation.py  rosbag_teleop.py  run_policy_inference.py  simulation.py  teleop.py  tune_rosbag.py  tune_simulation.py  tune_teleop.py  webcam.py  webcam_mujoco.py  webcam_rviz.py  webcam_simulation.py  webcam_teleop.py
scripts/: basic_node.py
src/: Finger.py  Hand.py  Joint.py  arduino_node.py  arm_node.py  basic_node.cpp  calibrate_node.py  constants.py  control_node.py  hand_node.py  keyboard_node.py  logger_node.py  model_inference_node.py  motors_node.py  mujoco_controller_node.py  mujoco_node.py  oakd_faker_node.py  oakd_node.py  retargeter_node.py  rokoko_node.py  sim_teleop_node.py  slider_node.py  teleop_node.py  test_node.py  utils.py  visualize_joints_node.py  webcam_mano_node.py  wrist_controller_node.py  yolo_node.py
(+109 files in other folders)
